minor update
